adding Entities and Components

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -3,12 +3,11 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>DENEME YAZISI</h1>
     <canvas id="canvas" width="640" height="480"></canvas>
-    <script src="./myblob.js"></script>
+    <script src="./rogulike.js"></script>
     <script>
       window.addEventListener("load", async () => {
-        await wasm_bindgen("./myblob_bg.wasm");
+        await wasm_bindgen("./rogulike_bg.wasm");
       });
     </script>
   </body>
